# seeklink

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODOS.md  llms.txt  project.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: blind-test.md  v0.3-plan.md
seeklink/: __init__.py  __main__.py  app.py  chunker.py  cli_client.py  daemon.py  db.py  embedder.py  freshness.py  ingest.py  models.py  reranker.py  search.py  server.py  watcher.py
sophia/: __init__.py  __main__.py  chunker.py  db.py  embedder.py  ingest.py  link_parser.py  models.py  search.py  server.py  watcher.py
synapsis/: __init__.py  __main__.py  db.py  ingest.py  models.py  search.py  server.py  tokenizer.py  watcher.py
tests/: conftest.py  test_blind_metrics.py  test_blind_runner_aggregates.py  test_chunker.py  test_cli_client.py  test_cli_json.py  test_daemon_protocol.py  test_db.py  test_embedder.py  test_get.py  test_ingest.py  test_integration.py  test_link_parser.py  test_search.py  test_server.py
tests/blind/: __init__.py  metrics.py  queries.example.yaml  queries.yaml  run.py
tests/blind/results/: A_v0.2.2.json  A_v0.3.json  A_v0.3_optB.json  A_v0.3_optC.json  A_v0.3_optC_tight.json  C_v0.2.2.json
tests/corpus/: README.md
tests/corpus/cards/: card-attention-formula.md  card-fsrs-core-idea.md  card-rrf-formula.md
tests/corpus/logs/: 2026-W14.md  2026-W15.md  2026-W16.md  2026-W17.md  2026-W18.md
tests/corpus/notes/: agent-memory-patterns.md  atomic-notes.md  attention-mechanism.md  bm25-intuition.md  deep-work-deliberate-practice.md  feynman-technique.md  forgetting-curve.md  fsrs-algorithm.md  memory-consolidation.md  note-to-card-workflow.md  reciprocal-rank-fusion.md  retrieval-augmented-generation.md  spaced-repetition.md  sqlite-fts5-cjk.md  vector-embeddings.md  zettelkasten.md
tests/corpus/recipes/: pad-thai.md  red-braised-pork.md  sourdough-starter.md
tests/corpus/sources/: anki-and-flashcards-intro.md  niklas-luhmann-zettelkasten.md  wikipedia-forgetting-curve.md  wikipedia-spaced-repetition.md
