[project]
name = "seeklink"
version = "0.1.0"
description = "Hybrid semantic search MCP server for Obsidian vaults. BM25 + vector + knowledge graph, native CJK support, fully local."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastembed>=0.7.4",
    "jieba>=0.42.1",
    "mcp[cli]>=1.26.0",
    "sqlite-vec>=0.1.6",
    "sqlitefts>=1.0.1",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
]
