[project]
name = "seeklink"
version = "0.3.2"
description = "Hybrid semantic search CLI for Obsidian-compatible markdown vaults. BM25 + vector + knowledge graph + title, fused via RRF. Native CJK. Fully local."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Siyuan Sun" },
]
keywords = [
    "semantic-search",
    "hybrid-search",
    "markdown",
    "obsidian",
    "knowledge-management",
    "pkm",
    "zettelkasten",
    "rag",
    "retrieval",
    "bm25",
    "vector-search",
    "sqlite-vec",
    "fts5",
    "cjk",
    "chinese",
    "jieba",
    "mlx",
    "apple-silicon",
    "local-first",
    "offline",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Database :: Database Engines/Servers",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
# The license is declared above as the SPDX expression `license = "MIT"`.
# Do NOT add a `License :: OSI Approved :: MIT License` classifier here —
# modern setuptools rejects the pair (PEP 639). Previously fixed in
# `c0d261a` and regressed in the v0.2.1 chore commit; this note pins it.
dependencies = [
    "fastembed>=0.7.4",
    "jieba>=0.42.1",
    "sqlite-vec>=0.1.6",
    "sqlitefts>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/simonsysun/seeklink"
Repository = "https://github.com/simonsysun/seeklink"
Issues = "https://github.com/simonsysun/seeklink/issues"
Changelog = "https://github.com/simonsysun/seeklink/blob/main/CHANGELOG.md"

[project.scripts]
seeklink = "seeklink.__main__:main"

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "mlx-lm>=0.31.2",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0",
    "sentence-transformers>=5.4.1",
]
